<resources>
    <string name="login">LOGIN</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="welcome_user">Welcome User</string>
    <string name="main_menu">Main Menu</string>
    <string name="checkout">Check IN/OUT Equipment</string>
    <string name="reports">Reports</string>
    <string name="settings">Settings</string>
</resources>
