<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/images"
    android:gravity="center_horizontal"
    tools:context=".RegisterActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/smileyfacestudios"/>
    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:textColor="#0A0A0A"
        android:textStyle="bold"
        android:textSize="20dp"
        android:background="@drawable/title"
        android:drawableLeft="@drawable/boss"
        android:hint="@string/username"/>
    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:textColor="#0A0A0A"
        android:textStyle="bold"
        android:textSize="20dp"
        android:background="@drawable/title"
        android:drawableLeft="@drawable/login"
        android:hint="@string/password"/>
    <EditText
        android:id="@+id/edittext_cnf_password"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:textColor="#0A0A0A"
        android:textStyle="bold"
        android:textSize="20dp"
        android:background="@drawable/title"
        android:drawableLeft="@drawable/password2"
        android:hint="@string/confirm_password"/>
    <Button
        android:id="@+id/button_register"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_2"
        android:textColor="#0A0A0A"
        android:text="@string/register"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#ffffff"
            android:text="@string/already_registered"/>
        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#F44336"
            android:textSize="16sp"
            android:text="@string/login"/>
    </LinearLayout>
</LinearLayout>