<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.equipmentcheckoutsystem.LoginActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:text="@string/main_menu"
        android:textSize="36sp"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/button_checkout"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_2"
        android:text="@string/checkout"
        android:textColor="#0A0A0A" />

    <Button
        android:id="@+id/button_report"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_2"
        android:text="@string/reports"
        android:textColor="#0A0A0A" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_2"
        android:text="@string/settings"
        android:textColor="#0A0A0A" />

    <ImageView
        android:id="@+id/ecs"
        android:layout_width="100dp"
        android:layout_height="110dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ecs" />

</LinearLayout>